--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,42 @@
   height: 66px;
   border-radius: 50%;
 }
+*{
+  margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+}
+
+body{
+  width: 100%;
+  background-color: #fafafa;
+  position: relative;
+  font-family: 'roboto'sans-serif;
+}
+.navbar{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background:#ffff;
+  border-bottom: 1px solid #dfdfdf;
+  display: flex;
+  justify-content: center;
+  padding: 5px 0;
+}
+.nav-wrapper{
+  width: 70%;
+  max-width: 1000px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.brand-img{
+  height: 100%;
+  margin-top: 5px;
+     }
 
 .card img {
   width: 58px;
